--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     </div>
                 </div>
                 <div class="devpic">
-                    <dfn title="Anand Kumar Shukla"><img src="/dev (1).png" alt="Devloper img"></dfn>
+                    <dfn title="Anand Kumar Shukla"><img src="dev (1).png" alt="Devloper img"></dfn>
 
                 </div>
             </div>
